fix the layout issues with the list of user collections

--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -637,6 +637,6 @@ body .result-card{
 }
 
 body .extra-sm-btn{
-    font-size: 2px;
-    padding: 1px;
+    font-size: 5px;
+    padding: 2px;
 }
